fix the height of list to avoid text jumping

--- a/src/app/components/aside/aside.component.scss
+++ b/src/app/components/aside/aside.component.scss
@@ -14,6 +14,7 @@
     padding: 0;
     letter-spacing: 1.5px;
     &__skill {
+     height: 80px;
      box-sizing: border-box;
      padding: var(--_space);
      color: #fff;
